(#1396) Fix Code Block Line Wrap
Closes #1396

--- a/docs/src/scss/Code.scss
+++ b/docs/src/scss/Code.scss
@@ -41,11 +41,13 @@
 
 		pre {
 			@include u-margin(0);
-			@include u-padding(3);
+			@include u-padding-x(3);
+			@include u-padding-top(8);
+			@include u-padding-bottom(3);
 			@include u-font-family('code');
 			@include u-overflow-y('hidden');
 			width: 100%;
-
+			white-space: pre-wrap;
 			// made so outline does not get cut off by wrapper
 			&:focus {
 				outline-offset: units(-1.5);
@@ -54,7 +56,7 @@
 
 		.site-copy-button {
 			@include u-position('absolute');
-			top: 16px;
+			top: 13px;
 			right: 12px;
 			z-index: 1;
 
